# FlightLogCheckDemo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fields.yaml  pyproject.toml
annotator/: index.html
assets/canonical/: template_alignment.json  template_meta.json
deploy/: .gitkeep  README.md  deploy.sh  nginx.conf
docs/: operations_logging.md  technical_report.html
outputs/demo_sample/: field_candidates.json  manifest.json  ocr_blocks.json  report.json
scripts/: aliyun_scanfile.py  compare_models.py  extract_ppocr_candidates.py  layout_ocr_compare.py  make_canonical.py  paddleocr_job.py  preprocess_image.py  run_demo.ps1  summarize_paddleocr_branch.py  validate_demo.py
src/formcheck/: __init__.py  app.py  config.py  crop.py  demo.py  enhance.py  field_assignment.py  fields.py  image_io.py  issue_triage.py  llm_cleaner.py  model_adapters.py  observability.py  paddleocr_aistudio.py  pipeline.py  ppocr_pipeline.py  recognizers.py  registration.py  scanfile.py  schemas.py  tasks.py  validators.py
static/: index.html
tests/: test_demo.py  test_field_assignment.py  test_fields.py  test_issue_triage.py  test_llm_cleaner.py  test_model_adapters.py  test_observability.py  test_pipeline_timings.py  test_ppocr_pipeline.py  test_ppocr_roi_evidence.py  test_tasks.py  test_validators.py
